# bitjo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
bugs/: CompletedTasksNoStrikethrough.md
features/: BulletJournalTUI.md  EntrySpecificActions.md  FuzzyCommandPaneSearch.md  ImportantJournalEntryFlag.md  OrganizeMethodsByClass.md  SpacebarCommandAlias.md  SplitJournalDays.md  SwitchJournalDay.md  VimKeyboardNavigation.md
src/: app.rs  journal.rs  main.rs  ui.rs
src/controllers/: mod.rs  opts.rs
src/lib/: cli.rs  entry.rs  event.rs  mod.rs  note.rs  task.rs
src/models/: entries.rs  mod.rs
src/services/: journal.rs  mod.rs
src/views/: application.rs  header_bar.rs  interactive.rs  mod.rs  text_area.rs
